# IDL_Complier

backend/: README.md  codegen.py
backend/common/: jsonIr_parser.py  utils.py
backend/cpp_with_ndk_gen/: cpp_common_header_gen.py  cpp_common_impl_gen.py  cpp_gen.py  cpp_gen_protocol.py  cpp_proxy_header_gen.py  cpp_proxy_impl_gen.py  cpp_service_header_gen.py  cpp_service_impl_gen.py
frontend/: CMakeLists.txt  build.sh
frontend/include/: compiled_ast.h  json_generator.h  json_writer.h  lexer.h  log.h  parser.h  raw_ast.h  source_file.h  source_manager.h  source_span.h  token.h  token_definitions.inc  tree_visitor.h  types.h  utils.h
frontend/src/: compiled_ast.cpp  json_generator.cpp  lexer.cpp  log.cpp  main.cpp  parser.cpp  raw_ast.cpp  source_file.cpp  source_manager.cpp  source_span.cpp  tree_visitor.cpp  utils.cpp
